force-app/main/default/objects/SSP_NoncustodialRelationship__c/SSP_NoncustodialRelationship__c.object-meta.xml
<CustomObject>
    <description>Junction between SSP_Member and SSP_Noncustodialparent</description>
    <label>SSP NonCustodialRelationship</label>
    <nameField>
        
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        
        <label>NoncustodialRelationship Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>SSP NonCustodialRelationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>