force-app/main/default/objects/SSP_NoncustodialRelationship__c/fields/DCNonCustodialRelationshipId__c.field-meta.xml
<CustomField>
    <fullName>DCNonCustodialRelationshipId__c</fullName>
    <description>This field is used to store DC Id to identify a unique Non Custodial Relationship record for an external system</description>
    <externalId>true</externalId>
    <label>DCNonCustodialRelationshipId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>