force-app/main/default/objects/SSP_NoncustodialRelationship__c/fields/GoodCauseCode__c.field-meta.xml
<CustomField>
    <fullName>GoodCauseCode__c</fullName>
    <description>This field is used to identify the good cause for a Non Custodial parent</description>
    <label>Good Cause</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>GoodCause</valueSetName>
        
        </valueSet>
</CustomField>