force-app/main/default/objects/SSP_NoncustodialRelationship__c/fields/HasChildSupportToggle__c.field-meta.xml
<CustomField>
    <fullName>HasChildSupportToggle__c</fullName>
    <description>Used to identify if primary applicant agree to cooperate with medical support</description>
    <label>HasChildSupportToggle</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>