force-app/main/default/objects/SSP_NoncustodialRelationship__c/fields/MedicalSupportComments__c.field-meta.xml
<CustomField>
    <fullName>MedicalSupportComments__c</fullName>
    <description>This field is used to provide medical Support comments to have a Non custodial parent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Support Comments</label>
    <type>TextArea</type>
</CustomField>