force-app/main/default/objects/SSP_NoncustodialRelationship__c/fields/SSP_Member__c.field-meta.xml
<CustomField>
    <fullName>SSP_Member__c</fullName>
    <description>This field is used to indicate the related member for a non custodial relationship record</description>
    <label>Member</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipName>NoncustodialRelationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>