force-app/main/default/objects/SSP_NoncustodialRelationship__c/fields/SSP_NonCustodialParent__c.field-meta.xml
<CustomField>
    <fullName>SSP_NonCustodialParent__c</fullName>
    <description>This field is used to indicate the Non custodial parent involved in the Junction record</description>
    <label>Non Custodial Parent</label>
    <referenceTo>SSP_NonCustodialParent__c</referenceTo>
    <relationshipName>NoncustodialRelationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>